# BasicSIMD

./: .gitignore  CMakeLists.txt  README.md  SIMD.h  analyze_benchmarks.py  run_tests.bat  run_tests.sh
.github/workflows/: linux-tests.yml  windows-tests.yml
benchmark_results_linux_gcc/: summary_report.txt
benchmark_results_windows_msvc/: summary_report.txt
tests/: simd_tests.cpp  test_simd_types.cpp
